@@ -1,6 +1,5 @@
 package crypto.bot.system;
 
-import crypto.bot.indicators.RSI;
 import crypto.bot.trading.BuySell;
 import crypto.bot.trading.Currency;
 
@@ -8,8 +7,6 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 public class ConfigSetup {
@@ -50,65 +47,11 @@ public class ConfigSetup {
                 String[] arr = line.strip().split(":");
                 if (arr.length != 2) continue;
                 switch (arr[0]) {
-                    case "RSI long waiting":
-                        RSI.LONG_WAITING = Integer.parseInt(arr[1]);
-                        break;
-                    case "RSI long open":
-                        RSI.LONG_OPEN = Integer.parseInt(arr[1]);
-                        break;
-                    case "RSI long close":
-                        RSI.LONG_CLOSE = Integer.parseInt(arr[1]);
-                        break;
-                    case "RSI short waiting":
-                        RSI.SHORT_WAITING = Integer.parseInt(arr[1]);
-                        break;
-                    case "RSI short open":
-                        RSI.SHORT_OPEN = Integer.parseInt(arr[1]);
-                        break;
-                    case "RSI short close":
-                        RSI.SHORT_CLOSE = Integer.parseInt(arr[1]);
-                        break;
                     case "Currencies to track":
-                        currencies = Collections.unmodifiableList(Arrays.asList(arr[1].toUpperCase().split(", ")));
-                        break;
-                    case "Money per trade":
-                        BuySell.MONEY_PER_TRADE = Double.parseDouble(arr[1]);
-                        break;
-                    case "Money percentage limit":
-                        BuySell.MONEY_PERCENTAGE_LIMIT = Double.parseDouble(arr[1]);
+                        currencies = List.of(arr[1].toUpperCase().split(", "));
                         break;
                     case "Leverage":
                         BuySell.LEVERAGE = Integer.parseInt(arr[1]);
-                        break;
-                    case "Trailing SL":
-                        Currency.TRAILING_SL = Double.parseDouble(arr[1]);
-                        break;
-                    case "Take profit":
-                        Currency.TAKE_PROFIT = Double.parseDouble(arr[1]);
-                        break;
-                    case "Confluence long open":
-                        Currency.CONFLUENCE_LONG_OPEN = Integer.parseInt(arr[1]);
-                        break;
-                    case "Confluence long close":
-                        Currency.CONFLUENCE_LONG_CLOSE = Integer.parseInt(arr[1]);
-                        break;
-                    case "Confluence long waiting":
-                        Currency.CONFLUENCE_LONG_WAITING = Integer.parseInt(arr[1]);
-                        break;
-                    case "Confluence short open":
-                        Currency.CONFLUENCE_SHORT_OPEN = Integer.parseInt(arr[1]);
-                        break;
-                    case "Confluence short close":
-                        Currency.CONFLUENCE_SHORT_CLOSE = Integer.parseInt(arr[1]);
-                        break;
-                    case "Confluence short waiting":
-                        Currency.CONFLUENCE_SHORT_WAITING = Integer.parseInt(arr[1]);
-                        break;
-                    case "SELL ROE":
-                        Currency.SELL_ROE = Double.parseDouble(arr[1]);
-                        break;
-                    case "GOAL ROE":
-                        Currency.GOAL_ROE = Double.parseDouble(arr[1]);
                         break;
                     case "FIAT":
                         fiat = arr[1].toUpperCase();
